# $Id: Changes,v 1.104 2004/02/28 03:21:12 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.73_01
        [ENHANCEMENTS]
        * URLs in META REFRESH tags are now treated as links.

0.72    Mon Jan 26 21:07:20 CST 2004
        [ENHANCEMENTS]
        * Added the set_visible() method, thanks to Peter Scott.

        [DOCUMENTATION]
        * Started the Cookbook at WWW::Mechanize::Cookbook.pod.

        [INTERNALS]
        * Made the globbing in Makefile.PL a little less command-line
          intensive.  Also fixed the missing files in MANIFEST.
        * Added t/pod-coverage.t for testing POD coverage.

0.71_02 Mon Dec 22 14:29:13 CST 2003
        [THINGS THAT MAY BREAK YOUR CODE]
        * Added a 5th, optional parameter to WWW::Mechanize::Link's
          constructor.  In 0.71_01, it was at the beginning of the
          argument list and was required.  Now it's at the end and is
          optional.  If, in the 15 hours since 0.71_01 came out, you
          went and changed all your WWW::Mechanize::Link constructors,
          you'll have to change them around again.  Otherwise, you can
          just ignore this change.

0.71_01 Sun Dec 21 23:48:12 CST 2003
        [THINGS THAT MAY BREAK YOUR CODE]
        * WWW::Mechanize::Link's constructor has a new argument
          that needs to be passed in, at the start of the argument
          list.

        [ENHANCEMENTS]
        * WWW::Mechanize::Link object now takes a $base URL, and will
          return absolute URLs with the url_abs() method.  Thanks to
          Ashley Pond.
        * Added another script to WWW::Mechanize::Examples.  It's a
          script that didn't make it into Spidering Hacks.

        [INSTALL & TESTS]
        * Heavy use of the new Test::Memory::Cycle module.
        * Fixed Makefile.PL so that the tests are selected under Win32.
        * Changed t/mech-dump.t so that the test succeeds under Win32.